# Embedded-Pong

./: .gitignore  .gitmodules  README.md  sdkconfig
main/: CMakeLists.txt  ball.cpp  ball.h  constants.h  game.cpp  game.h  gameObject.h  paddle.cpp  paddle.h  sketch.cpp
